--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,15 @@
         android:theme="@style/Theme.IncomeExpenseTracker"
         tools:targetApi="31">
         <activity
+            android:name=".ui.summary.SummaryActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.subcategory.SubcategoryActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.home.HomeActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
