Adding pie-chart

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,9 @@
             android:name=".ui.addedit.EditTransactionActivity"
             android:exported="false" />
         <activity
+            android:name=".ui.charts.ChartActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.home.HomeActivity"
             android:exported="true">
             <intent-filter>
